fixed horizontal scrolling on mobile phones

--- a/style.scss
+++ b/style.scss
@@ -91,8 +91,7 @@ nav .links a{
 }
 
 .noparallax{
-   /*  position: absolute;
-    top: 9vh; */
+    overflow: hidden;
     width: 100%;
     height: 90vh;
     background-color: #333;
@@ -209,12 +208,17 @@ nav .links a{
     h2{
         color: yellowgreen;
     }
-    .social img{
-        margin-top: 20px;
-        margin-left: 20px;
-        width: 40px;
-        height: 40px;
-
+    .social{
+        a{
+            text-decoration: none;
+            color: white;
+            img{
+                margin-top: 20px;
+                margin-left: 20px;
+                width: 40px;
+                height: 40px;
+            }
+        }
     }
 }
 
